@@ -1,2 +1,2 @@
 PACKAGE=icewm
-VERSION=1.2.13pre2
+VERSION=1.2.13pre3
