@@ -5,6 +5,7 @@
         - KDE system tray support (experimental)
 	- support for scaled backgrounds (experimental)
         - fix crash on option parsing in icesound
+	- remove "xftdummy" foundry from default fonts (Pavel Roskin)
 
 1.2.13pre2: 2003-09-05
 	- fix icewmbg not setting the background when started before icewm
